[gd_scene load_steps=57 format=3 uid="uid://c1cjip2yt6ylk"]

[ext_resource type="Script" uid="uid://ci87255xm3n2x" path="res://scenes/characters/player/player.gd" id="1_6avc5"]
[ext_resource type="Texture2D" uid="uid://dy0k1p1mr35e5" path="res://assets/game/characters/basic_character_actions.png" id="1_t61fv"]
[ext_resource type="Texture2D" uid="uid://cyw4xjixkom4x" path="res://assets/game/characters/basic_character_spritesheet.png" id="2_686vu"]
[ext_resource type="Script" uid="uid://bspnq3wt2ksl5" path="res://scenes/characters/player/input.gd" id="2_djydg"]
[ext_resource type="Script" uid="uid://pthfvbtwgrd5" path="res://scripts/state_machine/node_state_machine.gd" id="3_hss88"]
[ext_resource type="Script" uid="uid://qu4cen7cyak6" path="res://scenes/characters/player/idle_state.gd" id="4_qd3e3"]
[ext_resource type="Script" uid="uid://bper5mmdw4k00" path="res://scenes/characters/player/walk_state.gd" id="5_qd3e3"]
[ext_resource type="Script" uid="uid://d11qjdmfxylxf" path="res://scenes/characters/player/chopping_state.gd" id="7_mk55u"]
[ext_resource type="Script" uid="uid://c36nrh57616jq" path="res://scenes/characters/player/tilling_state.gd" id="8_xuses"]
[ext_resource type="Script" uid="uid://c2twuh7e6yl2" path="res://scenes/characters/player/watering_state.gd" id="9_42irl"]
[ext_resource type="Script" uid="uid://cfoskmxjlm3fs" path="res://scenes/components/hit_component.gd" id="10_3xnwo"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_bsn6e"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:player_direction")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:current_tool")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:do_tool")
properties/3/spawn = true
properties/3/replication_mode = 1

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_blysn"]
properties/0/path = NodePath("InputSynchronizer:input_direction")
properties/0/spawn = true
properties/0/replication_mode = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_hss88"]
atlas = ExtResource("1_t61fv")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qd3e3"]
atlas = ExtResource("1_t61fv")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6avc5"]
atlas = ExtResource("1_t61fv")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mk55u"]
atlas = ExtResource("1_t61fv")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuses"]
atlas = ExtResource("1_t61fv")
region = Rect2(0, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_42irl"]
atlas = ExtResource("1_t61fv")
region = Rect2(48, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xnwo"]
atlas = ExtResource("1_t61fv")
region = Rect2(0, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_djydg"]
atlas = ExtResource("1_t61fv")
region = Rect2(48, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsn6e"]
atlas = ExtResource("2_686vu")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_blysn"]
atlas = ExtResource("2_686vu")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hv5x3"]
atlas = ExtResource("2_686vu")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykrpk"]
atlas = ExtResource("2_686vu")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1nod"]
atlas = ExtResource("2_686vu")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4kqyw"]
atlas = ExtResource("2_686vu")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_svuau"]
atlas = ExtResource("2_686vu")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ro20i"]
atlas = ExtResource("2_686vu")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8y75b"]
atlas = ExtResource("1_t61fv")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tebod"]
atlas = ExtResource("1_t61fv")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nfx3"]
atlas = ExtResource("1_t61fv")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3hnlq"]
atlas = ExtResource("1_t61fv")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d73qs"]
atlas = ExtResource("1_t61fv")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6wme"]
atlas = ExtResource("1_t61fv")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxwvg"]
atlas = ExtResource("1_t61fv")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2v4cy"]
atlas = ExtResource("1_t61fv")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8rto"]
atlas = ExtResource("2_686vu")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4gk5"]
atlas = ExtResource("2_686vu")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0hd7"]
atlas = ExtResource("2_686vu")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpigg"]
atlas = ExtResource("2_686vu")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nt8su"]
atlas = ExtResource("2_686vu")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_10pim"]
atlas = ExtResource("2_686vu")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbtrp"]
atlas = ExtResource("2_686vu")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_es5sa"]
atlas = ExtResource("2_686vu")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sulyr"]
atlas = ExtResource("1_t61fv")
region = Rect2(0, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_71adu"]
atlas = ExtResource("1_t61fv")
region = Rect2(48, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxlma"]
atlas = ExtResource("1_t61fv")
region = Rect2(0, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ieypo"]
atlas = ExtResource("1_t61fv")
region = Rect2(48, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xm30n"]
atlas = ExtResource("1_t61fv")
region = Rect2(0, 480, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qe74o"]
atlas = ExtResource("1_t61fv")
region = Rect2(48, 480, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4se6"]
atlas = ExtResource("1_t61fv")
region = Rect2(0, 528, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4c5ab"]
atlas = ExtResource("1_t61fv")
region = Rect2(48, 528, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_omk8d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hss88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qd3e3")
}],
"loop": false,
"name": &"chopping_back",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6avc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mk55u")
}],
"loop": false,
"name": &"chopping_front",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuses")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42irl")
}],
"loop": false,
"name": &"chopping_left",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xnwo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djydg")
}],
"loop": false,
"name": &"chopping_right",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsn6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_blysn")
}],
"loop": true,
"name": &"idle_back",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hv5x3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykrpk")
}],
"loop": true,
"name": &"idle_front",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1nod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4kqyw")
}],
"loop": true,
"name": &"idle_left",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_svuau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ro20i")
}],
"loop": true,
"name": &"idle_right",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8y75b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tebod")
}],
"loop": false,
"name": &"tiling_back",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nfx3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hnlq")
}],
"loop": false,
"name": &"tiling_front",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d73qs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6wme")
}],
"loop": false,
"name": &"tiling_left",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxwvg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2v4cy")
}],
"loop": false,
"name": &"tiling_right",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8rto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4gk5")
}],
"loop": true,
"name": &"walk_back",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0hd7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpigg")
}],
"loop": true,
"name": &"walk_front",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nt8su")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10pim")
}],
"loop": true,
"name": &"walk_left",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbtrp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_es5sa")
}],
"loop": true,
"name": &"walk_right",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sulyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71adu")
}],
"loop": false,
"name": &"watering_back",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxlma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ieypo")
}],
"loop": false,
"name": &"watering_front",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xm30n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qe74o")
}],
"loop": false,
"name": &"watering_left",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4se6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4c5ab")
}],
"loop": false,
"name": &"watering_right",
"speed": 3.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_kghjy"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_djydg"]
radius = 4.0

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("hit_component")]
collision_layer = 2
script = ExtResource("1_6avc5")
current_tool = 1
hit_component = NodePath("HitComponent")

[node name="PlayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_bsn6e")

[node name="InputSynchronizer" type="MultiplayerSynchronizer" parent="."]
unique_name_in_owner = true
replication_config = SubResource("SceneReplicationConfig_blysn")
script = ExtResource("2_djydg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -9)
sprite_frames = SubResource("SpriteFrames_omk8d")
animation = &"watering_front"
autoplay = "idle_front"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_kghjy")
one_way_collision_margin = 0.0

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_node_state")]
script = ExtResource("3_hss88")
initial_node_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_qd3e3")

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource("5_qd3e3")

[node name="Chopping" type="Node" parent="StateMachine"]
script = ExtResource("7_mk55u")

[node name="Tilling" type="Node" parent="StateMachine" node_paths=PackedStringArray("animated_sprite_2d")]
script = ExtResource("8_xuses")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")

[node name="Watering" type="Node" parent="StateMachine"]
script = ExtResource("9_42irl")

[node name="HitComponent" type="Area2D" parent="."]
y_sort_enabled = true
collision_layer = 8
collision_mask = 16
script = ExtResource("10_3xnwo")
metadata/_custom_type_script = "uid://cfoskmxjlm3fs"

[node name="HitComponentShape2D" type="CollisionShape2D" parent="HitComponent"]
shape = SubResource("CircleShape2D_djydg")
debug_color = Color(0.827988, 0.00151208, 0.949612, 0.42)

[connection signal="ready" from="." to="." method="_on_ready"]
